--- a/work2/mushroom.ipynb
+++ b/work2/mushroom.ipynb
@@ -404,387 +404,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cap-shape</th>\n",
-       "      <th>cap-surface</th>\n",
-       "      <th>cap-color</th>\n",
-       "      <th>bruises?</th>\n",
-       "      <th>odor</th>\n",
-       "      <th>gill-attachment</th>\n",
-       "      <th>gill-spacing</th>\n",
-       "      <th>gill-size</th>\n",
-       "      <th>gill-color</th>\n",
-       "      <th>stalk-shape</th>\n",
-       "      <th>...</th>\n",
-       "      <th>stalk-color-above-ring</th>\n",
-       "      <th>stalk-color-below-ring</th>\n",
-       "      <th>veil-type</th>\n",
-       "      <th>veil-color</th>\n",
-       "      <th>ring-number</th>\n",
-       "      <th>ring-type</th>\n",
-       "      <th>spore-print-color</th>\n",
-       "      <th>population</th>\n",
-       "      <th>habitat</th>\n",
-       "      <th>class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73111</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73112</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73113</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73114</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73115</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>73116 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       cap-shape  cap-surface  cap-color  bruises?  odor  gill-attachment  \\\n",
-       "0              5            2          8         1     3                1   \n",
-       "1              3            3          2         0     7                1   \n",
-       "2              5            3          9         1     0                1   \n",
-       "3              5            3          8         1     6                1   \n",
-       "4              5            3          4         0     2                1   \n",
-       "...          ...          ...        ...       ...   ...              ...   \n",
-       "73111          5            3          4         1     5                1   \n",
-       "73112          5            3          2         1     5                1   \n",
-       "73113          3            2          2         0     7                1   \n",
-       "73114          5            0          8         0     5                1   \n",
-       "73115          5            0          9         0     2                1   \n",
-       "\n",
-       "       gill-spacing  gill-size  gill-color  stalk-shape  ...  \\\n",
-       "0                 0          0           4            0  ...   \n",
-       "1                 0          1           0            1  ...   \n",
-       "2                 0          0           5            0  ...   \n",
-       "3                 0          1           4            0  ...   \n",
-       "4                 0          1           0            1  ...   \n",
-       "...             ...        ...         ...          ...  ...   \n",
-       "73111             0          0           9            1  ...   \n",
-       "73112             0          0          10            1  ...   \n",
-       "73113             0          1           0            1  ...   \n",
-       "73114             1          0           3            1  ...   \n",
-       "73115             0          0           2            0  ...   \n",
-       "\n",
-       "       stalk-color-above-ring  stalk-color-below-ring  veil-type  veil-color  \\\n",
-       "0                           7                       7          0           2   \n",
-       "1                           6                       7          0           2   \n",
-       "2                           7                       7          0           2   \n",
-       "3                           7                       7          0           2   \n",
-       "4                           7                       6          0           2   \n",
-       "...                       ...                     ...        ...         ...   \n",
-       "73111                       6                       7          0           2   \n",
-       "73112                       6                       3          0           2   \n",
-       "73113                       6                       6          0           2   \n",
-       "73114                       7                       7          0           2   \n",
-       "73115                       6                       0          0           2   \n",
-       "\n",
-       "       ring-number  ring-type  spore-print-color  population  habitat  class  \n",
-       "0                1          4                  2           2        3      0  \n",
-       "1                1          0                  7           4        0      1  \n",
-       "2                1          4                  2           3        3      0  \n",
-       "3                1          4                  2           4        5      1  \n",
-       "4                1          0                  7           4        2      1  \n",
-       "...            ...        ...                ...         ...      ...    ...  \n",
-       "73111            1          4                  3           4        0      0  \n",
-       "73112            1          4                  2           5        0      0  \n",
-       "73113            1          0                  7           4        2      1  \n",
-       "73114            1          0                  2           3        1      0  \n",
-       "73115            1          2                  1           4        1      1  \n",
-       "\n",
-       "[73116 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for df in train_dfs:\n",
-    "    preprocess_mushrooms_datasets(df)\n"
+    "# Preprocess the mushrooms train and test dataframes\n",
+    "# For this dataset, we only need to convert the data to numerical values (via Label Encoding) as \n",
+    "# there are no missing values or different ranges (hence no normalisation required)\n",
+    "for df in train_dfs + test_dfs:\n",
+    "    preprocess_mushrooms_datasets(df)"
    ]
   }
  ],
