--- a/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
@@ -145,6 +145,18 @@ Some of these groups perform significantly differently from each other, given th
 
 We can deduce that the k-value has a substantial impact on model performance on both datasets. 
 
+\subsubsection*{Parameter Analysis}
 
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/interaction_effects_KNN_hepatitis.png}
+    \caption{Interaction effects for KNN models on the hepatitis dataset}
+\label{fig:interaction_effects_KNN_hepatitis}
+\end{figure}
 
+To further understand the impact of the parameters on the performance of the KNN algorithm,
+we analyzed the impact of the hyperparameters on the performance of the KNN algorithm, both independently and in combination.
 
+We can see from \autoref{fig:interaction_effects_KNN_hepatitis} that each parameter plays a significant role in the performance of the KNN algorithm.
+We also see some notable interactions between parameters, such as majority class voting performing better when combined with low k values and the Manhattan distance metric.
+We also see that Inverse Distance Weighting performs poorly in all cases except with k=1, where it there is difference at all (since voting scheme has no impact when k=1).
